[gd_scene load_steps=21 format=2]

[ext_resource path="res://src/dog/bark_area.gd" type="Script" id=1]
[ext_resource path="res://models/environment/Particles/Wave.mesh" type="ArrayMesh" id=4]
[ext_resource path="res://src/ui/animations/text_animation.tres" type="Animation" id=5]
[ext_resource path="res://sprites/Bubbles/dogtraffic_bark_2_smaller.png" type="Texture" id=6]

[sub_resource type="SphereShape" id=1]
radius = 3.0

[sub_resource type="ConvexPolygonShape" id=2]
points = PoolVector3Array( 0, 0, 0, -6, -1, -10, -6, 4, -10, 6, 4, -10, 6, -1, -10 )

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.169611, 1 )
colors = PoolColorArray( 1, 0.32549, 0.32549, 0.658824, 1, 0.460938, 0.460938, 1, 1, 0.341176, 0.341176, 0 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0.00326797, 0 ), 0.0, 1.21705, 0, 0, Vector2( 0.993464, 0.794318 ), 2.08636, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
direction = Vector3( 0, 0, -10 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 60.0
scale_curve = SubResource( 8 )
color_ramp = SubResource( 6 )

[sub_resource type="SpatialMaterial" id=10]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.512367, 1 )
colors = PoolColorArray( 1, 0, 0, 0.415686, 1, 0.513726, 0.513726, 0.427451, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="Curve" id=13]
max_value = 4.0
_data = [ Vector2( 0, 0 ), 0.0, 2.33182, 0, 0, Vector2( 0.493464, 2.19091 ), 5.56364, 5.56364, 0, 0, Vector2( 1, 4 ), -0.0794805, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=14]
curve = SubResource( 13 )

[sub_resource type="ParticlesMaterial" id=15]
gravity = Vector3( 0, 0, 0 )
scale_curve = SubResource( 14 )
color_ramp = SubResource( 12 )

[sub_resource type="SphereMesh" id=16]
radial_segments = 8

[sub_resource type="Animation" id=17]
resource_name = "BarkAnimation"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BarkBubble:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="BarkArea" type="Area"]
visible = false
input_ray_pickable = false
monitorable = false
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="Circle" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Cone" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="SoundWave" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.230037, 0.0540555 )
material_override = SubResource( 4 )
cast_shadow = 0
emitting = false
amount = 2
lifetime = 0.2
one_shot = true
visibility_aabb = AABB( -4, -3.70857, -10.7664, 8, 7.41715, 20.569 )
process_material = SubResource( 9 )
draw_pass_1 = ExtResource( 4 )

[node name="SoundSphere" type="Particles" parent="."]
material_override = SubResource( 10 )
cast_shadow = 0
emitting = false
amount = 2
lifetime = 0.2
one_shot = true
process_material = SubResource( 15 )
draw_pass_1 = SubResource( 16 )

[node name="BarkBubble" type="Spatial" parent="."]
visible = false

[node name="Sprite3D" type="Sprite3D" parent="BarkBubble"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, -3.06618, 3.7621, 0 )
pixel_size = 0.015
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/BarkAnimation = SubResource( 17 )
anims/slide_up_n_fade = ExtResource( 5 )
__meta__ = {
"_editor_description_": "WOOF"
}
[connection signal="body_entered" from="." to="." method="_on_BarkArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_BarkArea_body_exited"]
